# fastchain

./: db.sqlite  pyproject.toml
src/api/: __init__.py
src/utils/: restapis.py  template.py
